--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .jumbotron.jumbotron-fluid {
     text-align: center;
@@ -73,8 +74,21 @@ h2{
 }
 #gamePlayDescribed{
     border: 5px black solid;
-    background: bisque;
+    background: burlywood;
     height:400px;
+}
+#startDuel{
+    width: 300px;
+    height: 50px;
+    margin: 0 auto;
+    background:white;
+    color: lightblue;
+    font-size: 25px;
+}
+#duelingText{
+    color: white;
+    font-size: 25px;
+    float: left;
 }
 
 
